[gd_scene load_steps=7 format=3 uid="uid://dxot8oe0qjdrb"]

[ext_resource type="Texture2D" uid="uid://c5v7sq05qw5hi" path="res://PNG/Help.png" id="1_oe1m1"]
[ext_resource type="Script" uid="uid://bu1ti5t7shrjn" path="res://Script/starting_screen.gd" id="2_0iw35"]
[ext_resource type="PackedScene" uid="uid://bkvpgpsatme88" path="res://Scene/Checkbox.tscn" id="3_7oml0"]

[sub_resource type="Theme" id="Theme_l2nui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy4f4"]
bg_color = Color(0.805445, 0.701862, 0.218273, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xckc7"]
bg_color = Color(0.229188, 0.459691, 0.904113, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Node2D" type="Node2D"]

[node name="Help" type="Sprite2D" parent="."]
position = Vector2(575, 323)
scale = Vector2(0.573842, 0.454363)
texture = ExtResource("1_oe1m1")

[node name="Helpback button" type="Button" parent="Help"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1892.08
offset_top = -212.081
offset_right = -1649.08
offset_bottom = -128.081
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.52117, 1.91918)
theme = SubResource("Theme_l2nui")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_hy4f4")
theme_override_styles/normal = SubResource("StyleBoxFlat_xckc7")
text = "â—„ BACK"
script = ExtResource("2_0iw35")

[node name="CheckBox" parent="." instance=ExtResource("3_7oml0")]
offset_left = 942.0
offset_top = 541.0
offset_right = 966.0
offset_bottom = 565.0
scale = Vector2(3.46552, 3.60791)

[connection signal="pressed" from="Help/Helpback button" to="Help/Helpback button" method="_on_helpback_pressed"]
