[gd_scene load_steps=21 format=3 uid="uid://cpe54pc0uwiul"]

[ext_resource type="Script" uid="uid://bu1ti5t7shrjn" path="res://starting_screen.gd" id="1_mdfg2"]
[ext_resource type="FontFile" uid="uid://mlwgs8nqapxv" path="res://determination.ttf" id="1_n2vt4"]
[ext_resource type="Texture2D" uid="uid://cyg4pjfe2d8m7" path="res://M-ORI-REVOLUTION-7-24-2025.png" id="2_l0vbx"]
[ext_resource type="Texture2D" uid="uid://c3ul3eh77wwh3" path="res://pixil-frame-0 (3).png" id="4_grbrr"]
[ext_resource type="Texture2D" uid="uid://cnhxyd0eeah1v" path="res://Untitled design (1).png" id="5_grbrr"]
[ext_resource type="Texture2D" uid="uid://t522150bibsf" path="res://Tino_Rangatiratanga_Maori_sovereignty_movement_flag.svg" id="6_jrgtf"]
[ext_resource type="Texture2D" uid="uid://blvluj5nscyvk" path="res://—Pngtree—floating realistic clouds_8623463.png" id="7_bb5qi"]
[ext_resource type="Script" uid="uid://dofkovu5bmtkb" path="res://clouds.gd" id="7_w34a2"]
[ext_resource type="Texture2D" uid="uid://de78xpsndvkhs" path="res://pixil-frame-0 (3) (1).png" id="8_w34a2"]
[ext_resource type="Texture2D" uid="uid://uogio0x0ld83" path="res://BOSS.png" id="9_k2t2y"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l0vbx"]

[sub_resource type="Theme" id="Theme_l0vbx"]
default_font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0vbx"]
bg_color = Color(0.69837, 0.768586, 0.367833, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdfg2"]
bg_color = Color(0.312596, 0.700754, 0.27854, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id="Theme_0g0qd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2t2y"]
bg_color = Color(0.841946, 0.195025, 0.140668, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxvq4"]
bg_color = Color(0.759541, 0.565253, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb5qi"]
bg_color = Color(0.278144, 0.63239, 0.882393, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w34a2"]
bg_color = Color(0.758486, 0.562265, 0.180045, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bb5qi"]
load_path = "res://.godot/imported/building_1.png-e6cac1a4742c2b0253098b38474a8851.ctex"

[node name="Starting Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = 6.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997119, 0.985088)

[node name="Start button" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_l0vbx")
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.424
anchor_right = 1.0
anchor_bottom = 0.424
offset_left = -774.913
offset_top = -29.2681
offset_right = -431.913
offset_bottom = 80.7319
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998456, 1)
theme = SubResource("Theme_l0vbx")
theme_override_fonts/font = ExtResource("1_n2vt4")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_l0vbx")
theme_override_styles/normal = SubResource("StyleBoxFlat_mdfg2")
text = "Start
-Timata-"
script = ExtResource("1_mdfg2")

[node name="Quit button" type="Button" parent="Start button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = 191.0
offset_right = 123.5
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0g0qd")
theme_override_fonts/font = ExtResource("1_n2vt4")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_k2t2y")
theme_override_styles/normal = SubResource("StyleBoxFlat_gxvq4")
text = "Quit
-Whakamutu-"
script = ExtResource("1_mdfg2")

[node name="Help button" type="Button" parent="Start button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.356
anchor_top = 1.768
anchor_right = 0.413
anchor_bottom = 1.768
offset_left = -72.108
offset_top = -57.48
offset_right = 155.341
offset_bottom = 27.52
theme = SubResource("Theme_l0vbx")
theme_override_fonts/font = ExtResource("1_n2vt4")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_bb5qi")
theme_override_styles/normal = SubResource("StyleBoxFlat_w34a2")
text = "Help
-Awhina-"
script = ExtResource("1_mdfg2")

[node name="Maori_Revolution" type="Sprite2D" parent="."]
position = Vector2(569, 82)
scale = Vector2(1.04553, 1.63611)
texture = ExtResource("2_l0vbx")

[node name="Building" type="Sprite2D" parent="."]
position = Vector2(137.396, 441.585)
scale = Vector2(0.562038, 0.538722)
texture = SubResource("CompressedTexture2D_bb5qi")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(350.008, 490.311)
rotation = -0.000122882
scale = Vector2(1.64585, 1.73311)
texture = ExtResource("4_grbrr")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(571.647, 336.011)
scale = Vector2(0.578519, 0.48064)
texture = ExtResource("5_grbrr")

[node name="Maori flag" type="Sprite2D" parent="."]
position = Vector2(239.691, 504.523)
rotation = 1.58306
scale = Vector2(0.0287129, 0.041674)
texture = ExtResource("6_jrgtf")

[node name="Clouds" type="Sprite2D" parent="."]
position = Vector2(918.647, 210.134)
scale = Vector2(0.322988, 0.334751)
texture = ExtResource("7_bb5qi")
script = ExtResource("7_w34a2")

[node name="Clouds" type="Sprite2D" parent="Clouds"]
position = Vector2(-2238.73, -33.3577)
scale = Vector2(0.827695, 0.678463)
texture = ExtResource("7_bb5qi")
flip_h = true

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(756.179, 515.69)
scale = Vector2(2.03514, 2.10263)
texture = ExtResource("8_w34a2")

[node name="Boss" type="Sprite2D" parent="."]
position = Vector2(970.797, 488.281)
scale = Vector2(-3.775, 4.44114)
texture = ExtResource("9_k2t2y")

[connection signal="pressed" from="Start button" to="Start button" method="_on_start_pressed"]
[connection signal="pressed" from="Start button" to="Start button" method="_on_pressed"]
[connection signal="pressed" from="Start button/Quit button" to="Start button" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Start button/Help button" to="Start button/Help button" method="_on_helpbutton_pressed"]
[connection signal="pressed" from="Start button/Help button" to="Start button/Help button" method="_on_pressed"]
